--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pokedex",
+  "name": "Raúl Espinosa - National Pokédex",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
